was updated swagger documentation
